--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite will automatically inject the correct script here during build -->
+    <!-- No manual script tag needed -->
   </body>
 </html>
